logging works, also crub of playlist and user
